--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.1.4",
     "path": "^0.12.7",
-    "rimraf": "^3.0.0"
+    "rimraf": "^3.0.0",
+    "swiper": "^5.0.4"
   }
 }
